--- a/index.html
+++ b/index.html
@@ -3,193 +3,184 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شات البرنس | متجاوب</title>
+    <title>Master Chat v2025</title>
     <style>
-        :root { --gold: #ff9800; --bg: #0b0b0b; --panel: #1a1a1a; --admin: #ff3e3e; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Tahoma', sans-serif; }
+        :root { --accent: #00e5ff; --bg: #08080c; --card: #14141a; --text: #f0f0f0; }
         
-        body { background: var(--bg); color: #fff; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, sans-serif; }
+        
+        body { background: var(--bg); color: var(--text); height: 100vh; display: flex; overflow: hidden; }
 
-        /* --- الهيدر --- */
-        header { 
-            background: #000; padding: 10px 15px; border-bottom: 2px solid var(--gold); 
-            display: flex; justify-content: space-between; align-items: center; z-index: 1001; 
-        }
-        .logo { font-weight: bold; color: var(--gold); font-size: 1.2rem; }
-
-        /* --- الهيكل الرئيسي --- */
-        .app-main { display: flex; flex: 1; overflow: hidden; position: relative; }
-
-        /* --- القائمة الجانبية (متجاوبة) --- */
+        /* --- القائمة الجانبية الذكية --- */
         #sidebar { 
-            width: 260px; background: var(--panel); border-left: 1px solid #333;
-            transition: 0.3s; display: flex; flex-direction: column; z-index: 1000;
+            width: 280px; background: var(--card); border-left: 1px solid #222;
+            transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1); display: flex; flex-direction: column; z-index: 2000;
         }
 
-        /* --- ساحة الشات --- */
-        .chat-container { flex: 1; display: flex; flex-direction: column; background: #050505; position: relative; }
-        #chat-box { flex: 1; padding: 15px; overflow-y: auto; display: flex; flex-direction: column; gap: 15px; }
+        /* --- الواجهة الأساسية --- */
+        main { flex: 1; display: flex; flex-direction: column; position: relative; }
 
-        /* --- الرسالة --- */
-        .msg { display: flex; gap: 10px; align-items: flex-start; max-width: 90%; }
-        .msg img { width: 45px; height: 45px; border-radius: 50%; border: 1px solid var(--gold); object-fit: cover; }
-        .msg-body { background: #1a1a1a; padding: 10px; border-radius: 12px; border-bottom-right-radius: 2px; }
-        .msg-name { color: var(--admin); font-weight: bold; font-size: 13px; display: block; margin-bottom: 4px; }
-        .msg-text { font-size: 15px; line-height: 1.4; color: #eee; word-break: break-word; }
-        .msg-sig { font-size: 10px; color: var(--gold); margin-top: 8px; border-top: 1px solid #333; padding-top: 4px; display: block; }
+        header { 
+            height: 60px; background: #000; border-bottom: 1px solid var(--accent);
+            display: flex; justify-content: space-between; align-items: center; padding: 0 15px;
+        }
+
+        #chat-window { flex: 1; padding: 20px; overflow-y: auto; background-image: radial-gradient(#1a1a2e 0.5px, transparent 0.5px); background-size: 20px 20px; }
+
+        /* --- فقاعات الدردشة (مودرن) --- */
+        .msg-box { display: flex; gap: 12px; margin-bottom: 20px; animation: slideIn 0.3s; }
+        .u-pic { width: 48px; height: 48px; border-radius: 12px; border: 2px solid var(--accent); box-shadow: 0 0 10px rgba(0,229,255,0.3); }
+        .u-data { background: #1a1a24; padding: 12px 15px; border-radius: 0 15px 15px 15px; max-width: 80%; border-right: 3px solid var(--accent); }
+        .u-info { font-size: 13px; font-weight: bold; color: var(--accent); display: block; margin-bottom: 5px; }
+        .u-signature { font-size: 10px; color: #666; margin-top: 8px; border-top: 1px solid #333; padding-top: 5px; font-style: italic; }
 
         /* --- مشغل الفيديو --- */
-        #video-wrap {
-            position: absolute; top: 10px; left: 10px; width: 300px; background: #000;
-            border: 2px solid var(--gold); border-radius: 10px; display: none; z-index: 2000;
+        #pip-video {
+            position: absolute; top: 70px; left: 15px; width: 320px; background: #000;
+            border: 1px solid var(--accent); border-radius: 12px; display: none; z-index: 3000;
+            box-shadow: 0 15px 40px rgba(0,0,0,0.8);
         }
-        .vid-head { background: #222; padding: 5px 10px; display: flex; justify-content: space-between; cursor: move; }
-        #video-frame { height: 180px; width: 100%; }
+        .pip-bar { background: #111; padding: 6px 12px; display: flex; justify-content: space-between; font-size: 12px; border-radius: 12px 12px 0 0; }
+        .pip-body iframe { width: 100%; height: 180px; border-radius: 0 0 12px 12px; }
+        #pip-video.minimized { width: 120px; height: 40px; }
+        #pip-video.minimized .pip-body { display: none; }
+
+        /* --- شريط الغرف --- */
+        .rooms-row { display: flex; gap: 10px; padding: 12px; background: #0a0a0f; overflow-x: auto; border-bottom: 1px solid #111; }
+        .room-tag { background: #1a1a24; padding: 6px 16px; border-radius: 50px; font-size: 12px; cursor: pointer; white-space: nowrap; border: 1px solid #333; }
+        .room-tag.active { border-color: var(--accent); color: var(--accent); }
 
         /* --- منطقة الكتابة --- */
-        .input-area { padding: 10px; background: #111; border-top: 1px solid #333; display: flex; gap: 10px; }
-        #main-input { flex: 1; padding: 12px; background: #000; border: 1px solid #444; color: #fff; border-radius: 8px; outline: none; }
-        .send-btn { background: var(--gold); border: none; padding: 0 20px; border-radius: 8px; cursor: pointer; font-weight: bold; }
+        .input-bar { padding: 15px; background: #000; border-top: 1px solid #222; display: flex; gap: 10px; }
+        #msg-inp { flex: 1; padding: 12px; background: #111; border: 1px solid #333; color: #fff; border-radius: 10px; outline: none; }
+        .send-btn { background: var(--accent); color: #000; border: none; padding: 0 20px; border-radius: 10px; font-weight: bold; cursor: pointer; }
 
-        /* --- نظام الغرف --- */
-        .rooms { display: flex; gap: 8px; padding: 10px; background: #0f0f0f; border-bottom: 1px solid #222; overflow-x: auto; }
-        .room-btn { background: #222; padding: 5px 15px; border-radius: 20px; font-size: 12px; white-space: nowrap; cursor: pointer; border: 1px solid #333; }
-        .room-btn.active { border-color: var(--gold); color: var(--gold); }
-
-        /* --- إعدادات الموبايل (Responsive) --- */
+        /* --- التوازن (Responsive) --- */
         @media (max-width: 768px) {
-            #sidebar { 
-                position: absolute; right: -260px; height: 100%; 
-            }
-            #sidebar.open { right: 0; }
-            #video-wrap { width: 95%; left: 2.5%; }
-            .msg { max-width: 95%; }
+            #sidebar { position: fixed; right: -280px; height: 100%; }
+            #sidebar.active { right: 0; }
+            #pip-video { width: 90%; left: 5%; }
         }
 
-        /* زر القائمة للموبايل */
-        .menu-toggle { background: none; border: 1px solid var(--gold); color: var(--gold); padding: 5px 10px; border-radius: 5px; cursor: pointer; }
+        @keyframes slideIn { from { opacity: 0; transform: translateX(20px); } to { opacity: 1; transform: translateX(0); } }
     </style>
 </head>
 <body>
 
-    <header>
-        <button class="menu-toggle" onclick="toggleSidebar()">☰ القائمة</button>
-        <div class="logo">شات البرنس</div>
-        <button class="menu-toggle" onclick="toggleProfile()">👤 ملفي</button>
-    </header>
-
-    <div class="app-main">
-        <div id="sidebar">
-            <div style="padding: 20px; text-align: center; border-bottom: 1px solid #333;">
-                <img id="myImg" src="https://cdn-icons-png.flaticon.com/512/149/149071.png" style="width: 80px; height: 80px; border-radius: 50%; border: 2px solid var(--gold); object-fit: cover;">
-                <h4 id="myName" style="margin-top: 10px; color: var(--admin);">الماستر</h4>
-                <select id="myStatus" style="background:#000; color:#00ff00; border:none; font-size:11px; margin-top:5px;">
-                    <option value="متصل">🟢 متصل</option>
-                    <option value="مشغول">🔴 مشغول</option>
-                </select>
-            </div>
-            <div style="padding: 15px;">
-                <p style="font-size: 11px; color: #777;">الإدارة:</p>
-                <button onclick="addRoom()" style="width:100%; padding:8px; margin-top:5px; background:var(--gold); border:none; border-radius:5px; cursor:pointer; font-weight:bold;">➕ إضافة غرفة</button>
-                <p style="font-size: 11px; color: #777; margin-top:15px;">تغيير الصورة:</p>
-                <input type="file" id="fileInput" style="font-size:10px; margin-top:5px; width:100%;">
-            </div>
+    <div id="sidebar">
+        <div style="padding: 25px; text-align: center;">
+            <img id="avatar-preview" src="https://cdn-icons-png.flaticon.com/512/149/149071.png" style="width: 90px; height: 90px; border-radius: 20px; border: 2px solid var(--accent);">
+            <h3 style="margin-top: 15px; color: var(--accent);">مـاسـتـر الـشـات</h3>
+            <p id="user-status" style="font-size: 12px; color: #00ff00;">🟢 متصل الآن</p>
         </div>
-
-        <div class="chat-container">
-            <div class="rooms" id="roomsList">
-                <div class="room-btn active">الغرفة العامة</div>
-            </div>
-
-            <div id="chat-box">
-                <div style="color:var(--gold); text-align:center; font-size:12px; margin-top:20px;">✨ تم انضمام صاحب الشات ✨</div>
-            </div>
-
-            <div id="video-wrap">
-                <div class="vid-head">
-                    <span style="font-size:10px; color:var(--gold);">📺 يوتيوب مباشر</span>
-                    <div>
-                        <span onclick="minVid()" style="cursor:pointer; margin-left:10px;">-</span>
-                        <span onclick="closeVid()" style="cursor:pointer; color:red;">X</span>
-                    </div>
-                </div>
-                <div id="video-content"></div>
-            </div>
-
-            <div class="input-area">
-                <input type="text" id="main-input" placeholder="اكتب رسالة أو رابط يوتيوب...">
-                <button class="send-btn" onclick="send()">إرسال</button>
-            </div>
+        <div style="padding: 15px;">
+            <input type="file" id="img-upload" style="font-size: 10px; margin-bottom: 20px; width: 100%;">
+            <input type="text" id="sig-inp" placeholder="اكتب توقيعك هنا..." style="width: 100%; padding: 10px; background:#000; border:1px solid #333; color:var(--accent); border-radius:5px; margin-bottom:10px;">
+            <button onclick="addRoom()" style="width: 100%; padding: 12px; background: var(--accent); color: #000; border: none; font-weight: bold; border-radius: 5px; cursor: pointer;">➕ إضافة غرفة جديدة</button>
+            <button onclick="document.getElementById('chat-window').innerHTML=''" style="width: 100%; padding: 12px; background: #111; color: red; border: 1px solid red; font-weight: bold; border-radius: 5px; margin-top: 10px; cursor: pointer;">🧹 مسح الشات</button>
         </div>
     </div>
 
+    <main>
+        <header>
+            <button onclick="toggleMenu()" style="background:none; border:none; color:var(--accent); font-size:22px; cursor:pointer;">☰</button>
+            <div style="font-weight: bold; font-size: 18px; letter-spacing: 2px;">PRINCE <span style="color:var(--accent)">MASTER</span></div>
+            <div style="width: 30px;"></div>
+        </header>
+
+        <div class="rooms-row" id="roomsList">
+            <div class="room-tag active">العامة</div>
+            <div class="room-tag">الإدارة العليا</div>
+        </div>
+
+        <div id="chat-window">
+            <div style="text-align: center; color: #444; font-size: 11px; margin-top: 50px;">-- بـوابـة الإدارة مـفـتـوحـة --</div>
+        </div>
+
+        <div id="pip-video">
+            <div class="pip-bar">
+                <span>📺 بـث مـباشـر</span>
+                <div>
+                    <span onclick="minVideo()" style="cursor:pointer; margin-left:12px;">-</span>
+                    <span onclick="closeVideo()" style="cursor:pointer; color:red;">X</span>
+                </div>
+            </div>
+            <div class="pip-body" id="pipBody"></div>
+        </div>
+
+        <div class="input-bar">
+            <input type="text" id="msg-inp" placeholder="اكتب رسالة أو رابط يوتيوب...">
+            <button class="send-btn" onclick="sendMessage()">إرسال</button>
+        </div>
+    </main>
+
     <script>
-        let userData = { name: "البرنس", photo: "https://cdn-icons-png.flaticon.com/512/149/149071.png", sig: "سلطان زماني" };
+        let myPhoto = "https://cdn-icons-png.flaticon.com/512/149/149071.png";
 
-        function toggleSidebar() { document.getElementById('sidebar').classList.toggle('open'); }
-        function toggleProfile() { toggleSidebar(); } // في الموبايل يفتح القائمة
+        function toggleMenu() { document.getElementById('sidebar').classList.toggle('active'); }
 
-        function send() {
-            const inp = document.getElementById('main-input');
-            const box = document.getElementById('chat-box');
+        function sendMessage() {
+            const inp = document.getElementById('msg-inp');
+            const box = document.getElementById('chat-window');
             if(!inp.value.trim()) return;
 
             // كشف يوتيوب
             if(inp.value.includes('youtube.com') || inp.value.includes('youtu.be')) {
                 const vidId = inp.value.split('v=')[1] || inp.value.split('/').pop();
-                document.getElementById('video-wrap').style.display = 'block';
-                document.getElementById('video-content').innerHTML = `<iframe id="video-frame" src="https://www.youtube.com/embed/${vidId.split('&')[0]}?autoplay=1" frameborder="0" allowfullscreen></iframe>`;
+                document.getElementById('pip-video').style.display = 'block';
+                document.getElementById('pipBody').innerHTML = `<iframe src="https://www.youtube.com/embed/${vidId.split('&')[0]}?autoplay=1" frameborder="0" allowfullscreen></iframe>`;
                 inp.value = ''; return;
             }
 
+            const sig = document.getElementById('sig-inp').value || "إدارة شات البرنس";
             const html = `
-                <div class="msg">
-                    <img src="${userData.photo}">
-                    <div class="msg-body">
-                        <span class="msg-name">${userData.name}</span>
-                        <div class="msg-text">${inp.value}</div>
-                        <span class="msg-sig">📝 ${userData.sig}</span>
+                <div class="msg-box">
+                    <img src="${myPhoto}" class="u-pic">
+                    <div class="u-data">
+                        <span class="u-info">الـبـرنـس (الماستر)</span>
+                        <div style="color:#fff;">${inp.value}</div>
+                        <span class="u-signature">📝 ${sig}</span>
                     </div>
                 </div>`;
             box.innerHTML += html;
             inp.value = '';
             box.scrollTop = box.scrollHeight;
-            if(window.innerWidth < 768) document.getElementById('sidebar').classList.remove('open');
+            if(window.innerWidth < 768) document.getElementById('sidebar').classList.remove('active');
         }
 
         function addRoom() {
-            const r = prompt("اسم الغرفة:");
-            if(r) {
-                const btn = document.createElement('div');
-                btn.className = 'room-btn';
-                btn.innerText = r;
-                btn.onclick = function() {
-                    document.querySelectorAll('.room-btn').forEach(b => b.classList.remove('active'));
+            const name = prompt("ما اسم الغرفة الجديدة؟");
+            if(name) {
+                const tag = document.createElement('div');
+                tag.className = 'room-tag';
+                tag.innerText = name;
+                tag.onclick = function() {
+                    document.querySelectorAll('.room-tag').forEach(t => t.classList.remove('active'));
                     this.classList.add('active');
                 };
-                document.getElementById('roomsList').appendChild(btn);
+                document.getElementById('roomsList').appendChild(tag);
             }
         }
 
-        function minVid() { 
-            const v = document.getElementById('video-content');
-            v.style.display = v.style.display === 'none' ? 'block' : 'none';
-        }
-        function closeVid() { 
-            document.getElementById('video-wrap').style.display = 'none';
-            document.getElementById('video-content').innerHTML = '';
+        function closeVideo() { 
+            document.getElementById('pip-video').style.display = 'none'; 
+            document.getElementById('pipBody').innerHTML = '';
         }
 
-        document.getElementById('fileInput').onchange = function(e) {
-            const reader = new FileReader();
-            reader.onload = function() {
-                userData.photo = reader.result;
-                document.getElementById('myImg').src = reader.result;
+        function minVideo() {
+            document.getElementById('pip-video').classList.toggle('minimized');
+        }
+
+        document.getElementById('img-upload').onchange = function(e) {
+            const r = new FileReader();
+            r.onload = function() {
+                myPhoto = r.result;
+                document.getElementById('avatar-preview').src = r.result;
             };
-            reader.readAsDataURL(e.target.files[0]);
+            r.readAsDataURL(e.target.files[0]);
         };
 
-        document.getElementById('main-input').onkeypress = (e) => { if(e.key === 'Enter') send(); };
+        document.getElementById('msg-inp').onkeypress = (e) => { if(e.key === 'Enter') sendMessage(); };
     </script>
 </body>
 </html>
