--- a/index.html
+++ b/index.html
@@ -2,94 +2,91 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>شات الماستر الحقيقي</title>
+    <title>شات الماستر - البث الحي</title>
     <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.29.9.min.js"></script>
     <style>
         :root { --glow: #00f2ff; --master: #ff004c; }
         body { background: #000; color: #fff; margin: 0; display: flex; flex-direction: column; height: 100vh; font-family: sans-serif; overflow: hidden; }
-        header { height: 50px; border-bottom: 2px solid var(--glow); text-align: center; line-height: 50px; color: var(--glow); font-weight: bold; }
-        .main { display: flex; flex: 1; overflow: hidden; }
-        #right { width: 200px; background: #050505; border-left: 1px solid #222; padding: 15px; }
-        #left { width: 200px; background: #050505; border-right: 1px solid #222; padding: 15px; }
+        header { height: 50px; border-bottom: 2px solid var(--glow); text-align: center; line-height: 50px; color: var(--glow); font-weight: bold; box-shadow: 0 0 15px var(--glow); }
+        .wrapper { display: flex; flex: 1; overflow: hidden; }
+        /* ترتيب الجهات حسب طلبك */
+        #right { width: 220px; background: #050505; border-left: 1px solid #222; padding: 15px; }
+        #left { width: 220px; background: #050505; border-right: 1px solid #222; padding: 15px; }
         #center { flex: 1; display: flex; flex-direction: column; background: #0a0a0a; }
         #msgs { flex: 1; padding: 20px; overflow-y: auto; }
-        .input-box { padding: 15px; background: #000; display: flex; gap: 10px; }
-        input { flex: 1; background: #111; border: 1px solid #333; color: #fff; padding: 10px; border-radius: 20px; outline: none; }
-        .btn { background: var(--glow); color: #000; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer; font-weight: bold; }
-        .rank { background: var(--master); font-size: 10px; padding: 2px 8px; border-radius: 10px; animation: flash 1s infinite; }
-        .name { color: var(--glow); font-weight: bold; display: block; animation: move 2s infinite; }
-        @keyframes flash { 50% { opacity: 0.5; } }
+        .input-bar { padding: 15px; background: #000; display: flex; gap: 10px; border-top: 1px solid #222; }
+        input { flex: 1; background: #111; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 25px; outline: none; }
+        .btn { background: var(--glow); color: #000; border: none; padding: 10px 20px; border-radius: 20px; cursor: pointer; font-weight: bold; width: 100%; margin-bottom: 10px; }
+        .rank { background: var(--master); font-size: 10px; padding: 2px 8px; border-radius: 10px; animation: pulse 1s infinite; display: inline-block; }
+        .name { color: var(--glow); font-weight: bold; display: block; animation: move 2s infinite; margin-top: 5px; }
+        @keyframes pulse { 50% { opacity: 0.5; } }
         @keyframes move { 50% { transform: translateX(5px); } }
-        .msg-line { background: rgba(255,255,255,0.05); padding: 8px; border-radius: 5px; margin-bottom: 10px; border-right: 3px solid var(--glow); }
+        .msg-line { background: rgba(255,255,255,0.05); padding: 10px; border-radius: 8px; border-right: 4px solid var(--glow); margin-bottom: 10px; }
     </style>
 </head>
 <body>
 
-<header>MASTER LIVE SYSTEM - بث حقيقي</header>
+<header>MASTER LIVE SYSTEM - متصل الآن</header>
 
-<div class="main">
+<div class="wrapper">
     <div id="right">
-        <div style="color:var(--glow); font-size:12px;">📁 الغرف</div>
-        <button class="btn" style="width:100%; font-size:12px;" onclick="addR()">+ إضافة غرفة</button>
-        <div id="rooms-list"><button class="btn" style="width:100%; margin-top:5px;">العامة</button></div>
+        <div style="color:var(--glow); font-size:12px; margin-bottom:10px;">📁 الغرف</div>
+        <button class="btn" onclick="addR()">+ إضافة غرفة</button>
+        <div id="rooms-list"><button class="btn">الغرفة العامة</button></div>
+        <div style="color:var(--glow); font-size:12px; margin-top:20px;">🎨 التحكم</div>
+        <button class="btn" style="background:#222; color:#fff;" onclick="location.reload()">تحديث الشات</button>
     </div>
 
     <div id="center">
         <div id="msgs"></div>
-        <div class="input-box">
-            <input type="text" id="msgInput" placeholder="اكتب رسالة ستصل للكل الآن...">
-            <button class="btn" onclick="publishMessage()">إرسال</button>
+        <div class="input-bar">
+            <input type="text" id="msgInput" placeholder="اكتب رسالة ستظهر عند الجميع...">
+            <button class="btn" style="width:auto;" onclick="send()">إرسال</button>
         </div>
     </div>
 
     <div id="left">
         <div style="color:var(--glow); font-size:12px; text-align:center; margin-bottom:15px;">👤 المتصلون</div>
-        <div style="background:#111; padding:10px; border-radius:10px; text-align:center; border:1px solid #222;">
+        <div style="background:#111; padding:15px; border-radius:10px; text-align:center; border:1px solid #222;">
             <span class="rank">صاحب الشات</span>
             <span class="name">الماستر</span>
-            <div style="margin-top:5px;">📩 🤝 ❤️</div>
+            <div style="margin-top:10px; font-size:18px;">📩 🤝 ❤️</div>
         </div>
     </div>
 </div>
 
 <script>
-    // هذا هو المفتاح التجريبي لكي يعمل الشات فوراً بين الأجهزة
+    // محرك البث المباشر (جاهز للاستخدام الفوري)
     const pubnub = new PubNub({
         publishKey: 'pub-c-db838685-3004-4363-9524-7667858c0394',
         subscribeKey: 'sub-c-576a166e-c14d-11eb-a010-02da5302672a',
-        uuid: "Master_" + Math.random().toString(16).slice(2)
+        uuid: "User_" + Math.floor(Math.random() * 999)
     });
 
-    // الاشتراك في قناة الدردشة
-    pubnub.subscribe({ channels: ['master_chat'] });
+    pubnub.subscribe({ channels: ['master_global_chat'] });
 
-    // استقبال الرسائل من أي جهاز آخر
     pubnub.addListener({
-        message: function(event) {
-            const msgsDiv = document.getElementById('messages');
-            const msgHtml = `<div class="msg-line"><b style="color:var(--master)">[شخص ما]:</b> ${event.message.text}</div>`;
-            document.getElementById('msgs').innerHTML += msgHtml;
-            document.getElementById('msgs').scrollTop = document.getElementById('msgs').scrollHeight;
+        message: function(s) {
+            let m = document.getElementById('msgs');
+            m.innerHTML += `<div class="msg-line"><b style="color:var(--glow)">[زائر]:</b> ${s.message.text}</div>`;
+            m.scrollTop = m.scrollHeight;
         }
     });
 
-    // إرسال الرسالة لكي يراها الجميع
-    function publishMessage() {
-        const inp = document.getElementById('msgInput');
-        if(inp.value) {
-            pubnub.publish({
-                channel: 'master_chat',
-                message: { text: inp.value }
-            });
-            inp.value = '';
+    function send() {
+        let i = document.getElementById('msgInput');
+        if(i.value) {
+            pubnub.publish({ channel: 'master_global_chat', message: { text: i.value } });
+            i.value = '';
         }
     }
 
     function addR() {
         let n = prompt("اسم الغرفة:");
-        if(n) document.getElementById('rooms-list').innerHTML += `<button class="btn" style="width:100%; margin-top:5px;">${n}</button>`;
+        if(n) document.getElementById('rooms-list').innerHTML += `<button class="btn">${n}</button>`;
     }
-</script>
 
+    document.getElementById('msgInput').onkeypress = (e) => { if(e.key === 'Enter') send(); };
+</script>
 </body>
 </html>
