--- a/index.html
+++ b/index.html
@@ -7,52 +7,45 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
-        :root { --main: #00f2ff; --accent: #ff004c; }
-        body { background: #000; color: #fff; font-family: sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; }
-        header { padding: 15px; text-align: center; border-bottom: 2px solid var(--main); box-shadow: 0 0 10px var(--main); font-weight: bold; }
-        #chat-box { flex: 1; padding: 20px; overflow-y: auto; background: #050505; }
-        .msg { background: #111; padding: 10px; border-radius: 10px; margin-bottom: 10px; border-right: 3px solid var(--main); }
-        .input-area { padding: 15px; display: flex; gap: 10px; background: #111; }
-        input { flex: 1; padding: 12px; border-radius: 20px; border: 1px solid var(--main); background: #000; color: #fff; outline: none; }
-        button { background: var(--main); color: #000; border: none; padding: 10px 20px; border-radius: 20px; font-weight: bold; cursor: pointer; }
+        body { background: #000; color: #00f2ff; font-family: sans-serif; display: flex; flex-direction: column; height: 100vh; margin: 0; }
+        #chat { flex: 1; padding: 20px; overflow-y: auto; }
+        .input-area { padding: 20px; display: flex; gap: 10px; background: #111; }
+        input { flex: 1; padding: 12px; border-radius: 20px; border: 1px solid #00f2ff; background: #000; color: #fff; outline: none; }
+        button { background: #00f2ff; color: #000; border: none; padding: 10px 20px; border-radius: 20px; font-weight: bold; cursor: pointer; }
+        .msg { background: #111; padding: 10px; border-radius: 10px; margin-bottom: 10px; border-right: 3px solid #ff004c; }
     </style>
 </head>
 <body>
-
-<header>MASTER CHAT - ONLINE</header>
-<div id="chat-box"></div>
-<div class="input-area">
-    <input type="text" id="mInput" placeholder="اكتب رسالة...">
-    <button onclick="send()">إرسال</button>
-</div>
+    <h3 style="text-align:center;">نظام دردشة الماستر RG</h3>
+    <div id="chat"></div>
+    <div class="input-area">
+        <input type="text" id="msgInput" placeholder="اكتب رسالة...">
+        <button onclick="send()">إرسال</button>
+    </div>
 
 <script>
-    // الإعدادات الجديدة لمشروعك masterchat-f2da9
+    // هذا الرابط المأخوذ من صورتك الأخيرة لضمان العمل
     const firebaseConfig = {
-        databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com",
-        projectId: "masterchat-f2da9",
-        apiKey: "AIzaSyByMjoJ0Z8itTkh44-98crRVh_pxFh3pfo", // سيعمل مع مشروعك
-        authDomain: "masterchat-f2da9.firebaseapp.com"
+        databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com"
     };
 
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
     function send() {
-        const txt = document.getElementById('mInput').value;
-        if(txt) {
-            db.ref('messages').push({ user: "ماستر", text: txt });
-            document.getElementById('mInput').value = '';
+        const val = document.getElementById('msgInput').value;
+        if(val) {
+            db.ref('messages').push({ text: val });
+            document.getElementById('msgInput').value = '';
         }
     }
 
     db.ref('messages').on('child_added', (snap) => {
-        const m = snap.val();
         const div = document.createElement('div');
         div.className = 'msg';
-        div.innerHTML = `<b style="color:var(--accent)">${m.user}:</b> ${m.text}`;
-        document.getElementById('chat-box').appendChild(div);
-        document.getElementById('chat-box').scrollTop = document.getElementById('chat-box').scrollHeight;
+        div.innerHTML = `<b>زائر:</b> ${snap.val().text}`;
+        document.getElementById('chat').appendChild(div);
+        document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight;
     });
 </script>
 </body>
