--- a/index.html
+++ b/index.html
@@ -3,68 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Master RG Empire</title>
+    <title>Master RG - Chat Pro</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
-        :root { --main: #00f2ff; --pink: #ff004c; --bg: #050505; }
+        :root { --neon: #00f2ff; --pink: #ff004c; --gold: #ffcc00; --bg: #0a0a0a; }
         body { background: var(--bg); color: #fff; font-family: 'Segoe UI', sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
         
-        /* تقسيم الشاشة - اليمين متصلين - اليسار ملف شخصي */
-        .app-container { display: flex; flex: 1; overflow: hidden; }
-        .side-menu { width: 220px; background: #111; padding: 15px; border: 1px solid #222; display: flex; flex-direction: column; gap: 15px; }
-        #chat-section { flex: 1; display: flex; flex-direction: column; background: #000; border-left: 1px solid #222; border-right: 1px solid #222; }
-        #chat-display { flex: 1; padding: 15px; overflow-y: auto; }
+        /* تقسيم الواجهة */
+        .app-main { display: flex; flex: 1; overflow: hidden; }
+        .side { width: 200px; background: #111; padding: 15px; border: 1px solid #222; }
+        #chat-zone { flex: 1; display: flex; flex-direction: column; background: #000; }
+        #messages { flex: 1; padding: 15px; overflow-y: auto; }
 
-        /* الملف الشخصي (جهة اليسار) */
-        .profile-box { background: #1a1a1a; border-radius: 12px; border: 1px solid var(--main); overflow: hidden; text-align: center; }
-        .cover-img { width: 100%; height: 50px; background: linear-gradient(to right, var(--main), var(--pink)); cursor: pointer; }
-        .user-p-img { width: 55px; height: 55px; border-radius: 50%; border: 2px solid var(--main); margin: -25px auto 5px; cursor: pointer; background: #333; }
-        
-        /* الرسايل مع الصور */
-        .message-row { display: flex; gap: 10px; margin-bottom: 15px; }
-        .m-avatar { width: 45px; height: 45px; border-radius: 50%; border: 1px solid var(--main); }
-        .m-body { background: #151515; padding: 10px; border-radius: 10px; flex: 1; position: relative; }
-        .m-user { color: var(--main); font-weight: bold; font-size: 13px; }
-        .m-tools { margin-top: 5px; display: flex; gap: 6px; }
-        .m-tools button { font-size: 10px; background: #222; border: 1px solid #444; color: #aaa; cursor: pointer; padding: 2px 6px; border-radius: 4px; }
-        .m-tools .del-btn { color: #ff4444; }
+        /* الملف الشخصي المصغر */
+        .mini-profile { background: #1a1a1a; padding: 10px; border-radius: 10px; border: 1px solid var(--neon); text-align: center; cursor: pointer; margin-bottom: 20px; }
+        .mini-profile img { width: 50px; height: 50px; border-radius: 50%; border: 2px solid var(--neon); }
 
-        /* خانة الكتابة */
-        .write-area { padding: 15px; background: #111; display: flex; gap: 10px; }
-        input { flex: 1; background: #000; border: 1px solid #333; color: #fff; padding: 10px 15px; border-radius: 25px; outline: none; }
-        #send { background: var(--main); color: #000; border: none; padding: 0 20px; border-radius: 25px; font-weight: bold; cursor: pointer; }
+        /* نافذة الملف الشخصي الكبيرة (Modal) */
+        #profile-modal { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #151515; border: 2px solid var(--neon); padding: 25px; border-radius: 20px; z-index: 1000; width: 300px; text-align: center; box-shadow: 0 0 50px rgba(0,242,255,0.3); }
+        .close-btn { position: absolute; top: 10px; left: 10px; cursor: pointer; color: var(--pink); }
 
-        @media (max-width: 768px) { .side-menu { display: none; } }
+        /* ستايل الرسائل */
+        .msg-box { display: flex; gap: 10px; margin-bottom: 15px; animation: slide 0.3s ease; }
+        @keyframes slide { from { opacity: 0; transform: translateY(10px); } }
+        .msg-img { width: 45px; height: 45px; border-radius: 50%; border: 1px solid var(--neon); }
+        .msg-text { background: #1a1a1a; padding: 10px; border-radius: 12px; flex: 1; position: relative; }
+        .msg-user { font-weight: bold; font-size: 13px; margin-bottom: 5px; display: block; }
+        .admin-rank { color: var(--gold); text-shadow: 0 0 5px var(--gold); }
+
+        /* المدخلات */
+        .input-bar { padding: 15px; background: #111; display: flex; gap: 10px; }
+        input[type="text"] { flex: 1; background: #000; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 25px; outline: none; }
+        #send-btn { background: var(--neon); color: #000; border: none; padding: 0 25px; border-radius: 25px; font-weight: bold; cursor: pointer; }
+
+        .overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 999; }
     </style>
 </head>
 <body>
 
-<div class="app-container">
-    <div class="side-menu">
-        <div style="color:var(--main); font-size:13px; border-bottom:1px solid #222; padding-bottom:5px;">المتصلون</div>
-        <div style="font-size:14px;">👑 الماستر RG</div>
-        <div style="font-size:14px; color:#777;">👤 زائر 501</div>
-    </div>
+<div class="overlay" id="overlay" onclick="closeProfile()"></div>
 
-    <div id="chat-section">
-        <div id="chat-display"></div>
-        <div class="write-area">
-            <input type="text" id="msgInput" placeholder="اكتب رسالة...">
-            <button id="send" onclick="sendMsg()">إرسال</button>
+<div class="app-main">
+    <div class="side" style="border-right: none; border-left: 1px solid #222;">
+        <h4 style="color: var(--neon); font-size: 14px;">المتصلون</h4>
+        <div id="online-users">
+            <div style="color: var(--gold)">● الماستر RG</div>
         </div>
     </div>
 
-    <div class="side-menu">
-        <div class="profile-box">
-            <div class="cover-img" onclick="changeCover()"></div>
-            <img src="https://via.placeholder.com/55" id="myAvatar" class="user-p-img" onclick="changeAvatar()">
-            <input type="text" id="myName" value="الماستر_RG" style="width:80%; text-align:center; font-size:14px; margin-bottom:10px;">
+    <div id="chat-zone">
+        <div id="messages"></div>
+        <div class="input-bar">
+            <input type="text" id="mInput" placeholder="اكتب رسالتك يا ماستر...">
+            <button id="send-btn" onclick="send()">إرسال</button>
         </div>
-        <div style="color:var(--pink); font-size:13px;">المميزات</div>
-        <button style="font-size:11px; cursor:pointer;" onclick="changeAvatar()">تغيير الصورة</button>
-        <button style="font-size:11px; cursor:pointer;" onclick="location.reload()">تحديث</button>
     </div>
+
+    <div class="side">
+        <div class="mini-profile" onclick="openProfile()">
+            <img src="https://img.freepik.com/free-vector/user-blue-gradient_78370-4692.jpg" id="current-img">
+            <div id="display-name" style="margin-top: 5px; font-weight: bold;">الماستر RG</div>
+            <small style="color: #666;">اضغط لتعديل البروفايل</small>
+        </div>
+        <div style="color: var(--pink); font-size: 12px; margin-bottom: 10px;">إحصائيات</div>
+        <div style="font-size: 12px;">الرتبة: <span style="color: var(--gold)">أدمن</span></div>
+    </div>
+</div>
+
+<div id="profile-modal">
+    <span class="close-btn" onclick="closeProfile()">✖</span>
+    <h3>إعدادات الملف الشخصي</h3>
+    <p>تغيير الاسم:</p>
+    <input type="text" id="newName" placeholder="اسمك الجديد..." style="width: 80%; margin-bottom: 15px;">
+    <p>رابط الصورة (أو اختر صورة جاهزة):</p>
+    <input type="text" id="newPic" placeholder="رابط صورتك..." style="width: 80%; margin-bottom: 10px;">
+    <button onclick="saveProfile()" style="background: var(--neon); border: none; padding: 10px 20px; border-radius: 10px; cursor: pointer; font-weight: bold;">حفظ التغييرات</button>
 </div>
 
 <script>
@@ -72,46 +86,67 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let myImg = "https://via.placeholder.com/55";
+    // تحميل البيانات المحفوظة في المتصفح
+    let myData = {
+        name: localStorage.getItem('chat-name') || "الماستر_RG",
+        img: localStorage.getItem('chat-img') || "https://img.freepik.com/free-vector/user-blue-gradient_78370-4692.jpg"
+    };
 
-    function changeAvatar() {
-        let link = prompt("ضع رابط صورتك الجديدة:");
-        if(link) { myImg = link; document.getElementById('myAvatar').src = link; }
+    document.getElementById('display-name').innerText = myData.name;
+    document.getElementById('current-img').src = myData.img;
+
+    function openProfile() {
+        document.getElementById('profile-modal').style.display = 'block';
+        document.getElementById('overlay').style.display = 'block';
+        document.getElementById('newName').value = myData.name;
+        document.getElementById('newPic').value = myData.img;
     }
 
-    function sendMsg() {
-        const text = document.getElementById('msgInput').value;
-        const name = document.getElementById('myName').value;
-        if(text) {
-            db.ref('messages').push({ user: name, text: text, img: myImg, time: new Date().toLocaleTimeString() });
-            document.getElementById('msgInput').value = '';
+    function closeProfile() {
+        document.getElementById('profile-modal').style.display = 'none';
+        document.getElementById('overlay').style.display = 'none';
+    }
+
+    function saveProfile() {
+        myData.name = document.getElementById('newName').value;
+        myData.img = document.getElementById('newPic').value;
+        localStorage.setItem('chat-name', myData.name);
+        localStorage.setItem('chat-img', myData.img);
+        document.getElementById('display-name').innerText = myData.name;
+        document.getElementById('current-img').src = myData.img;
+        closeProfile();
+        alert("تم حفظ الملف الشخصي!");
+    }
+
+    function send() {
+        const txt = document.getElementById('mInput').value;
+        if(txt) {
+            db.ref('messages').push({
+                user: myData.name,
+                text: txt,
+                img: myData.img,
+                role: "admin", // يمكنك تغييرها برمجياً لاحقاً
+                time: new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'})
+            });
+            document.getElementById('mInput').value = '';
         }
     }
 
     db.ref('messages').on('child_added', (snap) => {
         const m = snap.val();
-        const id = snap.key;
         const div = document.createElement('div');
-        div.className = 'message-row';
+        div.className = 'msg-box';
+        const rankClass = m.role === "admin" ? "admin-rank" : "";
         div.innerHTML = `
-            <img src="${m.img}" class="m-avatar">
-            <div class="m-body">
-                <div class="m-user">${m.user} <small style="color:#444; float:left;">${m.time}</small></div>
-                <div style="margin-top:5px;">${m.text}</div>
-                <div class="m-tools">
-                    <button onclick="quote('${m.user}','${m.text}')">اقتباس</button>
-                    <button class="del-btn" onclick="del('${id}')">حذف</button>
-                    <button onclick="alert('تم كتم المستخدم')">كتم</button>
-                </div>
+            <img src="${m.img}" class="msg-img">
+            <div class="msg-text">
+                <span class="msg-user ${rankClass}">${m.user} <small style="color:#444; float:left;">${m.time}</small></span>
+                <div>${m.text}</div>
             </div>
         `;
-        document.getElementById('chat-display').appendChild(div);
-        document.getElementById('chat-display').scrollTop = document.getElementById('chat-display').scrollHeight;
+        document.getElementById('messages').appendChild(div);
+        document.getElementById('messages').scrollTop = document.getElementById('messages').scrollHeight;
     });
-
-    function del(id) { db.ref('messages/'+id).remove(); location.reload(); }
-    function quote(u, t) { document.getElementById('msgInput').value = `رد على ${u}: (${t}) -> `; }
 </script>
-
 </body>
 </html>
